--- a/package.json
+++ b/package.json
@@ -35,23 +35,23 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
+    "@babel/preset-env": "^7.8.7",
+    "@types/jquery": "^3.3.33",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "jquery": "^3.4.1",
     "serialize-javascript": "^2.1.2",
     "terser-webpack-plugin": "^1.4.3",
-    "typescript": "^3.7.4",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "jquery": "^3.4.1",
-    "@types/jquery": "^3.3.33"
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "bugs": {
     "url": "https://github.com/tonix-tuft/jquery-multiselect-checkbox/issues"
@@ -59,7 +59,7 @@
   "homepage": "https://github.com/tonix-tuft/jquery-multiselect-checkbox#readme",
   "dependencies": {
     "core-js": "^3.6.4",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.5"
   },
   "files": [
     "dist",
