--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "homepage": "https://github.com/tonix-tuft/jquery-multiselect-checkbox#readme",
   "dependencies": {
     "core-js": "^3.6.4",
+    "immutable-linked-ordered-map": "^1.3.1",
     "regenerator-runtime": "^0.13.5"
   },
   "files": [
