--- a/package.json
+++ b/package.json
@@ -59,9 +59,7 @@
   },
   "homepage": "https://github.com/tonix-tuft/jquery-multiselect-checkbox#readme",
   "dependencies": {
-    "core-js": "^3.6.4",
-    "immutable-linked-ordered-map": "^1.3.1",
-    "regenerator-runtime": "^0.13.5"
+    "immutable-linked-ordered-map": "^1.3.1"
   },
   "files": [
     "dist",
