--- a/package.json
+++ b/package.json
@@ -40,26 +40,25 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@types/jquery": "^3.3.33",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "jquery": "^3.4.1",
+    "minimist": ">=1.2.2",
     "serialize-javascript": "^2.1.2",
     "terser-webpack-plugin": "^1.4.3",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "minimist": ">=1.2.2"
+    "webpack-cli": "^3.3.11"
   },
   "bugs": {
     "url": "https://github.com/tonix-tuft/jquery-multiselect-checkbox/issues"
   },
   "homepage": "https://github.com/tonix-tuft/jquery-multiselect-checkbox#readme",
   "dependencies": {
-    "immutable-linked-ordered-map": "^1.3.1"
+    "immutable-linked-ordered-map": "^1.4.0"
   },
   "files": [
     "dist",
