--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "WEBPACK_ENV=watch webpack --progress --colors --watch",
+    "mkdir-build": "mkdir -p ./dist/es6",
     "clear-build": "find ./dist ! -name '.gitignore' -type f -exec rm -f {} +",
     "dev-build": "WEBPACK_ENV=watch webpack --progress --colors",
     "build": "WEBPACK_ENV=build webpack",
     "publish-git": "npm publish && git push && git push --tags",
-    "build-all": "npm run clear-build && npm run build && npm run dev-build && npm run build-module",
+    "build-all": "npm run mkdir-build && npm run clear-build && npm run build && npm run dev-build && npm run build-module",
     "publish-patch": "npm run build-all && npm version patch && npm run publish-git",
     "publish-minor": "npm run build-all && npm version minor && npm run publish-git",
     "publish-major": "npm run build-all && npm version major && npm run publish-git",
