--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "terser-webpack-plugin": "^3.1.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "glob-parent": ">=5.1.2"
   },
   "bugs": {
     "url": "https://github.com/tonix-tuft/jquery-multiselect-checkbox/issues"
